--- a/index.jade
+++ b/index.jade
@@ -35,7 +35,7 @@ html
             text(x='560', y='560') 26°
             polyline(points='0,100 70,80 140,60 210,70 280,100 350,110 420,80 490,90 560,560 630,100')
           .text_area
-            .temperature 22°C
+            .temperature 22°F
             .indos
               .address 臺北市內湖區
               .time 星期四 上午11:00
